# Github-Searcher

./: CMakeLists.txt  README.md  curl_downloader.cpp
master/: .env  curl_downloader.cpp  curl_downloader.h  main.cpp
master/alternative_main/: main_cli.cpp
